gateway/manifests/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      gateway
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 3
    template:
      metadata:
        labels:
          app: gateway
      spec:
        containers:
          - name: gateway
            image: tandung5634/gateway
            envForm:
              - configMapRef:
                  name: gateway-configmap
              - secretRef:
                  name: gateway-secret
